fixed overflow issue on audio files

--- a/app/assets/stylesheets/entries.scss
+++ b/app/assets/stylesheets/entries.scss
@@ -601,6 +601,7 @@ Entry Audio
   text-align: center;
   float: left;
   position: relative;
+  overflow: hidden;
 }
 
 #titles .audio span {
